# physics-simulation

./: .gitignore  Cargo.toml  README.md
newtonian-bodies/: Cargo.toml  README.md  example.json  newtonian.parquet
newtonian-bodies/.ipynb_checkpoints/: visualize-checkpoint.ipynb
newtonian-bodies/src/: Body.rs  dynamics.rs  main.rs  writer.rs
newtonian-bodies/tests/: cli.rs
newtonian-solar-system/: Cargo.toml
newtonian-solar-system/src/: main.rs
src/: main.rs
